# Aeris

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
aeris/: api_key.py  data_access.py  db.py  decorators.py  env.py  main.py
aeris/data/: project.py  task.py  user.py
aeris/resolvers/: mutations.py  queries.py  types.py
aeris/schemas/: schema.graphql
langchain/: .gitignore  README.md  pyproject.toml
langchain/aeris_langchain/: callback_handler.py  client.py  middleware.py  runnables.py
langchain/examples/: news_post.py
langchain/tests/: test_client.py
langgraph/: pyproject.toml
langgraph/examples/: news_post.py
llamaindex/: pyproject.toml
llamaindex/aeris_llamaindex/: client.py
llamaindex/aeris_llamaindex/examples/: autonomous.py
llamaindex/aeris_llamaindex/examples/tools/: lookup_location.py  lookup_weather.py  search_web.py
llamaindex/examples/: weather.py
scripts/: dump_db.py  init_db.py
server/: pyproject.toml  schema_dump.sql
server/aeris/: db.py  decorators.py  embeddings.py  main.py
server/aeris/data/: task.py
server/aeris/resolvers/: mutations.py  queries.py  types.py
server/aeris/schemas/: schema.graphql
server/scripts/: dump_db.py  run_server.py
server/tests/: test_tasks.py  test_verify_api_key.py
tests/: conftest.py  test_api.py  test_projects.py  test_tasks.py  test_verify_api_key.py
