[project]
name = "aeris"
version = "0.1.0"
description = "Agent Experience Repository for Intelligent Systems"
authors = [{ name = "Erik Peterson", email = "e@eriklp.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "ariadne (>=0.24.0,<0.25.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pypika (>=0.48.9,<0.49.0)",
    "inngest (>=0.4.18,<0.5.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
pre-commit = "^4.0.1"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I", "B"]
lint.ignore = [
    "E501", # Ignore line too long if necessary
]
target-version = "py310"
