[project]
name = "aeris"
version = "0.1.0"
description = "Agent Experience Repository for Intelligent Systems"
authors = [{ name = "Erik Peterson", email = "e@eriklp.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.23.8"
pre-commit = "^4.0.1"
asyncpg-stubs = "^0.30.0"
pypika-stubs = "^0.48.0a1"
watchfiles = "^1.0.4"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I", "B"]
lint.ignore = [
    "E501", # Ignore line too long if necessary
]
target-version = "py310"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
